--- a/src/components/home/static/styles/Home.css
+++ b/src/components/home/static/styles/Home.css
@@ -37,32 +37,34 @@ hr{
     
 }
 
+
 /* Our-students */
 #our-students {
-    margin: 20px 50px;
-    height: 200px;
+    display: flex;                
+    justify-content: space-around; 
+    align-items: center;           
+    margin: 20px 60px;             
+    height: 200px; 
+    background-color: white;                   
+}
+
+.logo {
+                     
+    text-align: center;                      
+    box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.1);
+}
+
+#our-students img {
+    height: 180px;                 
+    width: 180px;                 
 }
 
 .heading h3{
     margin-top: 40px;
     text-align: center;
     font-size: 24px;
+    color: white;
 }
-
-.logo{
-    width: 20%;
-    margin: 20px 30px;
-    float: left;
-    position: relative;
-    text-align: center;
-}
-
-.logo img{
-    height: 150px;
-    width: 150px;
-    position: relative;
-}
-
 /* top-selling courses */
 
 .card {
@@ -85,6 +87,18 @@ box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);
     color: black;
     font-size: 16px;
     line-height: 1.75;
+}
+
+/* card */
+
+.card {
+    padding: 0;
+    border-radius: 0;
+    border: 0;
+}
+
+.card .course-img{
+    border: none;
 }
 
 /* footer */
